other module cleanup